<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white">

    <GridLayout
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:background="@drawable/menu"
        android:columnCount="4"
        android:padding="10dp"
        android:rowCount="1"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/drinkBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/drinks"
            android:onClick="drinkOnclick"
            app:srcCompat="@drawable/ic_baseline_local_drink_24" />

        <ImageButton
            android:id="@+id/snackBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/snacks"
            android:onClick="snackOnclick"
            app:srcCompat="@drawable/ic_baseline_emoji_food_beverage_24" />

        <ImageButton
            android:id="@+id/foodBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/foods"
            android:onClick="foodOnclick"
            app:srcCompat="@drawable/ic_baseline_fastfood_24" />

        <ImageButton
            android:id="@+id/myOrderBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/topup"
            android:onClick="myOrderOnclick"
            app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />

    </GridLayout>

    <LinearLayout
        android:id="@+id/powered_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_menu"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Powered By"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textColor="#272727"
            android:textFontWeight="600"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:src="@drawable/logo_binus_clear"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/voucher"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@id/promo"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="#F87555"
            android:text="@string/promo"
            android:textSize="16dp"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:backgroundTint="#00A55E"
            android:text="@string/my_voucher"
            android:textSize="16dp"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/promo"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_above="@id/powered_by"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:elevation="10dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_img"
                android:src="@drawable/promo_banner" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/balance"
        android:background="@drawable/name"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="40dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingEnd="30dp">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_baseline_person_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:text="Welcome,"
                android:textColor="#ECECEC"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:text="Goldius Leonard"
                android:textColor="#FFFFFF"
                android:textFontWeight="900"
                android:textSize="40sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/voucher"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/balance"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Balance"
                android:textColor="#2E2E2E" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="Rp 0"
                android:textColor="#252525"
                android:textSize="24sp" />

            <Button
                android:id="@+id/topUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:backgroundTint="#4CAF50"
                android:onClick="topupOnclick"
                android:text="@string/topup"
                android:textColor="@color/white"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>